bo tests some fixes